--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,21 +6,21 @@ stages:
 build:
   stage: build
   tags:
-    - "AILab"
+    - "local-use"
   script:
     - echo "build"
 
 test:
   stage: test
   tags:
-    - "AILab"
+    - "local-use"
   script:
     - echo "testing"
 
 deploy:
   stage: deploy
   tags:
-    - "AILab"
+    - "local-use"
   script:
     - echo "deploy"
   rules:
