--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,10 @@ deploy:
     - echo "deploy"
     - docker
     - cd ASLFN
-    - docker build -t aslfn:latest -f rootuser.Dockerfile .
-    - docker run -p 8002:8002 -d aslfn:latest
+    - print(123)
+    # - docker build -t aslfn:latest -f rootuser.Dockerfile .
+    # - docker run -p 8002:8002 -d aslfn:latest
   rules:
     - changes:
-      - ASLFN/*
+      - ASLFN/docker_apps/*
 
