ymlEditing 自動產出 yml file

--- a/test.yml
+++ b/test.yml
@@ -3,5 +3,23 @@
   - test
   - deploy
 - build:
+    only: scenario_2
+    script: echo "build"
     stage: build
+    tags: AILab
+- test:
+    only: scenario_2
+    script: echo "testing"
+    stage: test
+    tags: AILab
+- deploy:
+    rules:
+      changes: ASLFN/docker_apps/*
+    script:
+    - echo "deploy"
+    - docker
+    - cd ASLFN
+    - docker build -t aslfn:latest -f rootuser.Dockerfile .
+    - docker run -p 80:80 -d aslfn:latest
+    stage: deploy
     tags: AILab
