--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,37 +1,25 @@
-stages:
+- stages:
   - build
   - test
   - deploy
-
-build:
-  stage: build
-  tags:
-    - "AILab"
-  only:
-    - scenario_2
-  script:
-    - echo "build"
-
-test:
-  stage: test
-  tags:
-    - "AILab"
-  only:
-    - scenario_2
-  script:
-    - echo "testing"
-
-deploy:
-  stage: deploy
-  tags:
-    - "AILab"
-  script:
+- build:
+    only: scenario_2
+    script: echo "build"
+    stage: build
+    tags: AILab
+- test:
+    only: scenario_2
+    script: echo "testing"
+    stage: test
+    tags: AILab
+- deploy:
+    rules:
+      changes: ASLFN/docker_apps/*
+    script:
     - echo "deploy"
     - docker
     - cd ASLFN
     - docker build -t aslfn:latest -f rootuser.Dockerfile .
-    - docker run -p 8002:8002 -d aslfn:latest
-  rules:
-    - changes:
-      - ASLFN/docker_apps/*
-
+    - docker run -p 80:80 -d aslfn:latest
+    stage: deploy
+    tags: AILab
