--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,25 +1,33 @@
-- stages:
-  - build
-  - test
-  - deploy
-- build:
-    only: scenario_2
-    script: echo "build"
-    stage: build
-    tags: AILab
-- test:
-    only: scenario_2
-    script: echo "testing"
-    stage: test
-    tags: AILab
-- deploy:
-    rules:
-      changes: ASLFN/docker_apps/*
-    script:
-    - echo "deploy"
-    - docker
-    - cd ASLFN
-    - docker build -t aslfn:latest -f rootuser.Dockerfile .
-    - docker run -p 80:80 -d aslfn:latest
-    stage: deploy
-    tags: AILab
+build:
+  only:
+  - scenario_2
+  script:
+  - echo "build"
+  stage: build
+  tags:
+  - AILab
+deploy:
+  rules:
+  - changes:
+    - ASLFN/docker_apps/*
+  script:
+  - echo "deploy"
+  - docker
+  - cd ASLFN
+  - docker build -t aslfn:latest -f rootuser.Dockerfile .
+  - docker run -p 8839:8839 -d aslfn:latest
+  stage: deploy
+  tags:
+  - AILab
+stages:
+- build
+- test
+- deploy
+test:
+  only:
+  - scenario_2
+  script:
+  - echo "testing"
+  stage: test
+  tags:
+  - AILab
