--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,10 @@ deploy:
   - docker
   - cd ASLFN
   - docker build -t aslfn:latest -f rootuser.Dockerfile .
-  - docker run -p 8717:8002 -d aslfn:latest
+  - docker run -p 8874:8002 -d aslfn:latest
   - cd C:\Users\user\rams\projcet\apps
   - docker ps -l | findstr aslfn > dockerTmp
+  - python updateDeploymentCsv.py -m 1
   stage: deploy
   tags:
   - AILab
