--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
   - AILab
 deploy:
   after_script:
-  - python updateDeploymentCsv.py -m 0
+  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 1
   rules:
   - changes:
     - ASLFN/docker_apps/*
@@ -17,7 +17,7 @@ deploy:
   - docker
   - cd ASLFN
   - docker build -t aslfn:latest -f rootuser.Dockerfile .
-  - docker run -p 8685:8002 -d aslfn:latest
+  - docker run -p 8997:8002 -d aslfn:latest
   - cd C:\Users\user\rams\projcet\apps
   - docker ps -l | findstr aslfn > dockerTmp
   stage: deploy
