--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,20 +6,27 @@ build:
   stage: build
   tags:
   - AILab
-revoke:
+deploy:
+  after_script:
+  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 0 -a "deploying"
+  rules:
+  - changes:
+    - ASLFN/docker_apps/*
   script:
-  - echo "revoke"
+  - echo "deploy"
   - docker
-  - docker stop bce90b708136
-  - docker rm bce90b708136
-  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 1 -a "revoking"
-  stage: revoke
+  - cd ASLFN
+  - docker build -t aslfn:latest -f rootuser.Dockerfile .
+  - docker run -p 8975:8002 -d aslfn:latest
+  - cd C:\Users\user\rams\projcet\apps
+  - docker ps -l | findstr aslfn > dockerTmp
+  stage: deploy
   tags:
   - AILab
 stages:
 - build
 - test
-- revoke
+- deploy
 test:
   only:
   - scenario_2
