--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,23 +6,27 @@ build:
   stage: build
   tags:
   - AILab
-revoke:
+deploy:
+  after_script:
+  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 5 -a "deploying"
   rules:
   - changes:
-    - apps/revokeTmp
+    - ASLFN/docker_apps/deployTmp
   script:
-  - echo "revoke"
+  - echo "deploy"
   - docker
-  - docker stop 563b971db50f
-  - docker rm 563b971db50f
-  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 6 -a "revoking"
-  stage: revoke
+  - cd ASLFN
+  - docker build -t aslfn:latest -f rootuser.Dockerfile .
+  - docker run -p 8936:8002 -d aslfn:latest
+  - cd C:\Users\user\rams\projcet\apps
+  - docker ps -l | findstr aslfn > dockerTmp
+  stage: deploy
   tags:
   - AILab
 stages:
 - build
 - test
-- revoke
+- deploy
 test:
   only:
   - scenario_2
