更動幾個地方 : 1. saving.py 已寫 mongoDB 替代方案，尚未取代原先 2. app.py 已寫 mongoDB 替代方案於兩處(2/7 for deployment.csv)，尚未取代原先

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,9 @@ revoke:
   script:
   - echo "revoke"
   - docker
-  - docker stop f37942da0ad4
-  - docker rm f37942da0ad4
-  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 1 -a "revoking"
+  - docker stop None
+  - docker rm None
+  - python C:\Users\user\rams\projcet\apps\updateDeploymentCsv.py -m 4 -a "revoking"
   stage: revoke
   tags:
   - AILab
