--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,19 @@
-revoke:
+deploy:
+  after_script:
+  - python C:\Users\user\rams\projcet\apps\updateDeployment.py -m 0 -a "deploying"
   rules:
   - changes:
-    - apps/revokeTmp
+    - ASLFN/docker_apps/deployTmp
   script:
-  - echo "revoke"
+  - echo "deploy"
   - docker
-  - docker stop 983fd0a5971e
-  - docker rm 983fd0a5971e
-  - python C:\Users\user\rams\projcet\apps\updateDeployment.py -m 0 -a "revoking"
-  stage: revoke
+  - cd ASLFN
+  - docker build -t aslfn:latest -f rootuser.Dockerfile .
+  - docker run -p 8381:8002 -d aslfn:latest
+  - cd C:\Users\user\rams\projcet\apps
+  - docker ps -l | findstr aslfn > dockerTmp
+  stage: deploy
   tags:
   - AILab
 stages:
-- revoke
+- deploy
