--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,20 @@
-revoke:
+deploy:
+  after_script:
+  - python C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps\updateDeployment.py -m
+    0 -a "deploying"
   rules:
   - changes:
-    - apps/revokeTmp
+    - ASLFN/docker_apps/deployTmp
   script:
-  - echo "revoke"
+  - echo "deploy"
   - docker
-  - docker stop bc5e3b4eb49c
-  - docker rm bc5e3b4eb49c
-  - python C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps\updateDeployment.py -m
-    0 -a "revoking"
-  stage: revoke
+  - cd ASLFN
+  - docker build -t aslfn:latest -f rootuser.Dockerfile .
+  - docker run -p 8365:8002 -d aslfn:latest
+  - cd C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps
+  - docker ps -l | findstr aslfn > dockerTmp
+  stage: deploy
   tags:
   - laptop-ASUS
 stages:
-- revoke
+- deploy
