--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,16 @@
-deploy:
-  after_script:
-  - echo $env:PATH
-  - python C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps\updateDeployment.py -m
-    1 -a "deploying"
+revoke:
   rules:
   - changes:
-    - ASLFN/docker_apps/deployTmp
+    - apps/revokeTmp
   script:
-  - echo "deploy"
+  - echo "revoke"
   - docker
-  - cd ASLFN
-  - docker build -t aslfn:latest -f rootuser.Dockerfile .
-  - docker run -p 8647:8002 -d aslfn:latest
-  - cd C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps
-  - docker ps -l | findstr aslfn > dockerTmp
-  stage: deploy
+  - docker stop bc5e3b4eb49c
+  - docker rm bc5e3b4eb49c
+  - python C:\Users\ASUS\Desktop\NCCU\Thesis\first-try\apps\updateDeployment.py -m
+    0 -a "revoking"
+  stage: revoke
   tags:
   - laptop-ASUS
 stages:
-- deploy
+- revoke
