--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 deploy:
   rules:
   - changes:
-    - developer_upload
+    - developer_upload/timeTmp
   script:
   - echo "deploy"
   - docker
@@ -9,7 +9,7 @@ deploy:
   - tar -xf matching-yetta.zip
   - cd matching-yetta
   - docker build -t matching-yetta:latest -f rootuser.Dockerfile .
-  - docker run -p 8317:8005 -d matching-yetta:latest
+  - docker run -p 8928:8005 -d matching-yetta:latest
   stage: deploy
   tags:
   - AILab
