--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,11 @@ deploy:
   script:
   - echo "deploy"
   - docker
-  - cd developer_upload
+  - cd developer_upload\matching-yetta
   - tar -xf matching-yetta.zip
   - cd matching-yetta
   - docker build -t matching-yetta:latest -f rootuser.Dockerfile .
-  - docker run -p 8928:8005 -d matching-yetta:latest
+  - docker run -p 8548:8005 -d matching-yetta:latest
   stage: deploy
   tags:
   - AILab
