--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,10 @@ deploy:
   script:
   - echo "deploy"
   - docker
-  - cd developer_upload\cramming-julian
-  - tar -xf cramming-julian.zip
-  - docker build -t cramming-julian:latest -f rootuser.Dockerfile .
-  - 'docker run --name cramming-julian -p 8495:8005 -d cramming-julian:latest '
+  - cd developer_upload\reorganizing-susan
+  - tar -xf reorganizing-susan.zip
+  - docker build -t reorganizing-susan:latest -f rootuser.Dockerfile .
+  - 'docker run --name reorganizing-susan -p 8079:8005 -d reorganizing-susan:latest '
   stage: deploy
   tags:
   - AILab
