--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,10 @@ deploy:
   script:
   - echo "deploy"
   - docker
-  - cd developer_upload\cramming-leo
-  - tar -xf cramming-leo.zip
-  - docker build -t cramming-leo:latest -f rootuser.Dockerfile .
-  - 'docker run --name cramming-leo -p 8660:8005 -d cramming-leo:latest '
+  - cd developer_upload\reorganizing-susan
+  - tar -xf reorganizing-susan.zip
+  - docker build -t reorganizing-susan:latest -f rootuser.Dockerfile .
+  - 'docker run --name reorganizing-susan -p 8351:8005 -d reorganizing-susan:latest '
   stage: deploy
   tags:
   - AILab
