--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,10 @@ deploy:
   script:
   - echo "deploy"
   - docker
-  - cd developer_upload\cramming-julian
-  - tar -xf cramming-julian.zip
-  - docker build -t cramming-julian:latest -f rootuser.Dockerfile .
-  - 'docker run --name cramming-julian -p 8659:8005 -d cramming-julian:latest '
+  - cd developer_upload\cramming-kang
+  - tar -xf cramming-kang.zip
+  - docker build -t cramming-kang:latest -f rootuser.Dockerfile .
+  - 'docker run --name cramming-kang -p 8810:8005 -d cramming-kang:latest '
   stage: deploy
   tags:
   - AILab
