--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,10 @@ deploy:
   script:
   - echo "deploy"
   - docker
-  - cd developer_upload\reorganizing-dorothy
-  - tar -xf reorganizing-dorothy.zip
-  - docker build -t reorganizing-dorothy:latest -f rootuser.Dockerfile .
-  - 'docker run --name reorganizing-dorothy -p 8089:8005 -d reorganizing-dorothy:latest '
+  - cd developer_upload\reorganizing-louis
+  - tar -xf reorganizing-louis.zip
+  - docker build -t reorganizing-louis:latest -f rootuser.Dockerfile .
+  - 'docker run --name reorganizing-louis -p 8898:8005 -d reorganizing-louis:latest '
   stage: deploy
   tags:
   - AILab
